# sono-2021

./: .gitignore  Caddyfile  app.py  jukebox.service  pyproject.toml  stop.py  test.py  volume.py
jukebox/: __init__.py
templates/: index.html
