[tool.poetry]
name = "sono-brahier"
version = "0.1.0"
description = ""
authors = ["Jacques Supcik <jacques@supcik.net>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
json-rpc = "^1.13.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
